src/objects/Change__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EnvInUse__c</fullName>
        <formula>IF( ISPICKVAL( Environment__r.Status__c , &quot;In Use&quot;) , &quot;True&quot;, &quot;False&quot;)</formula>
        <label>EnvInUse?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Environment__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Environment</label>
        <referenceTo>Environment__c</referenceTo>
        <relationshipLabel>Changes</relationshipLabel>
        <relationshipName>Changes</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Manual_Change__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Manual Change</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Metadata__c</fullName>
        <label>Metadata</label>
        <picklist>
            <picklistValues>
                <fullName>Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Field</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Object</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Page Layout</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Picklist Values</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Profile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Role Hierarchy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trigger</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VF Page</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Workflow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent</label>
        <referenceTo>Change__c</referenceTo>
        <relationshipLabel>Deployments</relationshipLabel>
        <relationshipName>Deployments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Story_ID__c</fullName>
        <label>Story ID</label>
        <length>63</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Create</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Update</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delete</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Change</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Environment__c</columns>
        <columns>Type__c</columns>
        <columns>Metadata__c</columns>
        <columns>Name__c</columns>
        <columns>Manual_Change__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>MC-{00000}</displayFormat>
        <label>Change Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Changes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Environment_must_be_In_Use</fullName>
        <active>true</active>
        <description>Environments that are no longer in use are not allowed to have new changes added to them.</description>
        <errorConditionFormula>EnvInUse__c = &quot;False&quot;</errorConditionFormula>
        <errorDisplayField>Environment__c</errorDisplayField>
        <errorMessage>The selected environment is no longer in use and cannot accept new changes.</errorMessage>
    </validationRules>
</CustomObject>